Inventory flow (#5)
* added pattern regexp for password validation

* Refactor password validation and update user entity annotations; add migration for user ID type changes

* added pattern regexp for password validation

* Refactor password validation and update user entity annotations; add migration for user ID type changes

* inventory related changes

* SecurityConfig update for inventory_flow

* merger of the main <- inventory_flow